...

 <Button
     android:layout_width="wrap_content"
     android:layout_height="60dp"
     android:text="@string/click_here_to_add_a_new_profile"
     android:gravity="center"
     android:id="@+id/addnewprofile"
     />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select_a_profile_you_wish_to_continue_as"
...



    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewprofiles"
        >


    </ListView>


...
