<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

   <TextView
       android:id="@+id/titleAddProfile"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:layout_margin="10dp"
       android:fontFamily="Asap-Regular"
       android:layout_marginTop="43dp"
       android:textColor="#06bebd"
       android:textSize="44sp"
       android:textAlignment="center"
       android:text="Add a Profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginBottom="5dp">

        <Button
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/addprofile"
           android:text="+"
           android:gravity="center"
           android:textSize="42sp"
           android:textColor="#ffffff"
           android:textAllCaps="false"
           android:background="@drawable/roundedbtn"
           />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Profiles"
        >

    </ListView>

  </LinearLayout>