...
        android:layout_weight="0.65"
        android:orientation="vertical"
        android:padding="20dp"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_rate_seeker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/raterName"
            android:layout_weight="1"
            android:textSize="30sp"
            android:textAllCaps="false"
            android:layout_marginBottom="15dp"
            android:textColor="#4c70a3"
            android:background="@drawable/roundedbtn2"
            android:text="@string/rate_a_job_seeker" />

        <Button
            android:id="@+id/btn_view_my_ratings_provider"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/btn_rate_seeker"
            android:layout_marginBottom="15dp"
            android:textAllCaps="false"
            android:layout_weight="1"
...
