<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.oreo.mcommonjobs.Activity.ProviderEmployeesListActivity">

    <TextView
        android:id="@+id/EmployeeListTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="Asap-Regular"
        android:text="@string/employees"
        android:textAlignment="center"
        android:textColor="#06bebd"
        android:textSize="44sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/provideremployeelist"
        android:layout_below="@+id/EmployeeListTitle">
    </ListView>

</RelativeLayout>
