...
        android:textSize="44sp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ViewJobsTitle"
        android:id="@+id/joblist">

    </ListView>


</RelativeLayout>
